@@ -1,9 +1,9 @@
 <objects attr-sync="on">
-  <object type="MonoDevelop.VBNetBinding.ProjectOptionsPanelWidget" palette-category="General" allow-children="false" base-type="Gtk.Bin">
+  <object type="MonoDevelop.VBNetBinding.ConfigurationOptionsPanelWidget" palette-category="General" allow-children="false" base-type="Gtk.Bin">
     <itemgroups />
     <signals />
   </object>
-  <object type="MonoDevelop.VBNetBinding.ConfigurationOptionsPanelWidget" palette-category="General" allow-children="false" base-type="Gtk.Bin">
+  <object type="MonoDevelop.VBNetBinding.ProjectOptionsPanelWidget" palette-category="General" allow-children="false" base-type="Gtk.Bin">
     <itemgroups />
     <signals />
   </object>
